# CMakeLearn

./: git_note.txt  note.txt
ch1_hello/: hello.cpp
ch1_hello/build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Hello.sln  Hello.vcxproj  Hello.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ch1_hello/build_msvc/Hello.dir/Debug/: Hello.exe.recipe  Hello.ilk
ch1_hello/build_msvc/Hello.dir/Debug/Hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ch1_hello/build_msvc/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
ch1_hello/build_msvc/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ch1_hello/build_msvc/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
ch1_hello/build_msvc/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+2 more)
ch2_1_message/: first.cmake
ch2_2_set_list/: list.cmake  set.cmake
ch2_3_control/: if_foreach.cmake
ch2_4_func/: func.cmake
ch2_5_scope/: CMakeLists.txt
ch2_6_macro/: macro.cmake
ch3_1_project/: CMakeLists.txt  main.cpp
ch3_2_project/: CMakeLists.txt  main.cpp
ch3_3_project/animal/: cat.cpp
ch3_4_project/: CMakeLists.txt
ch3_4_project/animal/: CMakeLists.txt
ch3_4_project/build_1/: Makefile  cmake_install.cmake
ch3_4_project/build_1/animal/: Makefile
ch3_4_project/build_2/: CMakeCache.txt  Makefile
ch3_4_project/build_2/animal/: Makefile  cmake_install.cmake
ch4_1_project/: CMakeLists.txt
ch4_1_project/include/: dog.h
ch4_2_project/: CMakeLists.txt  main.cpp
ch5_headfile/: CMakeLists.txt
ch5_headfile/animal/: cat.h  dog.cpp
standardexample/: CMakeLists.txt
